--- a/gb/20/7/11/n12248716.md
+++ b/gb/20/7/11/n12248716.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>掸封尘：气煞鲁班爷 唯问“王八蛋工程”何时休</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/b5f9640c209ccaddadb9b3e6b5f73867-600x400.png" />
 <h6>重庆石柱县中益乡凉水井大桥暴雨过后用手一捏就碎。图左：上海中心大厦暴雨后内景，有人用倒挂雨伞接住屋顶漏下来的水。（网络截图合成）
 </h6>
 <hr>
-	<p>【大纪元2020年07月11日讯】一场<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>，使中国南方的两个直辖市，闹出两个大笑话：一个是重庆市石柱县中益乡凉水井<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E6%A1%A5.md#1">大桥</a>，在暴雨过后用手一捏就稀碎。另一个是位于上海的“中国第一高楼”上海中心大厦内部多个楼层在暴雨过后水流如注。</p>
-<p>人们不禁惊呼：1998年朱镕基因<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%95%BF%E6%B1%9F%E5%A4%A7%E5%A0%A4.md#1">长江大堤</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E6%B1%9F.md#1">九江</a>段溃堤而怒斥的“王八蛋工程”后继有人，续写新篇，“胡汉三又回来了！”。</p>
+	<p>【大纪元2020年07月11日讯】一场暴雨，使中国南方的两个直辖市，闹出两个大笑话：一个是重庆市石柱县中益乡凉水井大桥，在暴雨过后用手一捏就稀碎。另一个是位于上海的“中国第一高楼”上海中心大厦内部多个楼层在暴雨过后水流如注。</p>
+<p>人们不禁惊呼：1998年朱镕基因长江大堤九江段溃堤而怒斥的“王八蛋工程”后继有人，续写新篇，“胡汉三又回来了！”。</p>
 <h2>“王八蛋工程”一语的由来</h2>
-<p>1998年夏，长江爆发全流域性特大洪水，沿江地区数千万人民的生命安全受到严重威胁。8月7日，长江<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E6%B1%9F.md#1">九江</a>段4号闸与5号闸之间决堤30米左右。洪水滔滔，局面顿时失控。九江溃堤，震惊全国。</p>
+<p>1998年夏，长江爆发全流域性特大洪水，沿江地区数千万人民的生命安全受到严重威胁。8月7日，长江九江段4号闸与5号闸之间决堤30米左右。洪水滔滔，局面顿时失控。九江溃堤，震惊全国。</p>
 <p>后经连续奋战，于8月9日第一道围堰合龙，至12日修筑完成第二道组合坝，至20日完成第三道堤防。为封堵决口，50多个小时内，总共沉入9只船，最大150吨位，最小70吨位；石块2万吨，碎沙石4万方、钢材8吨、木材50立方米，出动兵力超过三万人，最终合龙成功。</p>
 <p>8月9日，时任总理朱镕基赶到九江，乘快艇去大堤决口处实地察看详情。在快艇小会议室，九江市副市长吕明汇报说，大堤是1966年修的土堤，当时没有严格清基，1995年增建防洪护墙时也未清基。</p>
 <p>朱镕基当即打断汇报问道，现在倒塌的墙里有没有发现钢筋？是否有用竹筋代替钢筋的现象？这样的堤有多长？介绍者回答说，未发现钢筋……</p>
-<p>朱镕基听罢勃然大怒，厉声斥道：你们不是说固若金汤吗？谁知堤内全是“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90%E6%B8%A3.md#1">豆腐渣</a>”！这样的工程要从根查起，设计、施工、监理都要追查。人命关天，百年大计，千秋大业，竟搞成“豆腐渣”、“王八蛋工程”，腐败到这种程度怎么得了！要实事求是，历史是不能欺骗的！</p>
-<p>决堤前，朱镕基就说过：“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%95%BF%E6%B1%9F%E5%A4%A7%E5%A0%A4.md#1">长江大堤</a>失守是要杀头的。”而今，我们没有看到中共因九江决堤问责任何官员。</p>
-<h2>“手撕<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E6%A1%A5.md#1">大桥</a>”横空出世</h2>
+<p>朱镕基听罢勃然大怒，厉声斥道：你们不是说固若金汤吗？谁知堤内全是“豆腐渣”！这样的工程要从根查起，设计、施工、监理都要追查。人命关天，百年大计，千秋大业，竟搞成“豆腐渣”、“王八蛋工程”，腐败到这种程度怎么得了！要实事求是，历史是不能欺骗的！</p>
+<p>决堤前，朱镕基就说过：“长江大堤失守是要杀头的。”而今，我们没有看到中共因九江决堤问责任何官员。</p>
+<h2>“手撕大桥”横空出世</h2>
 <p>2020年7月6日，网传一段“重庆石柱县中益乡一座桥梁的护栏被手一捏就散落”的视频，引发网友质疑与热议。</p>
-<p>一名操着重庆万州口音的男士，在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>中站在一座大桥上，展示当地一个“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90%E6%B8%A3.md#1">豆腐渣</a>工程”，只见这名男士轻松用手将桥上“石柱”剥碎，有网友直呼其“这是手撕大桥”！</p>
+<p>一名操着重庆万州口音的男士，在暴雨中站在一座大桥上，展示当地一个“豆腐渣工程”，只见这名男士轻松用手将桥上“石柱”剥碎，有网友直呼其“这是手撕大桥”！</p>
 <p>据当地主管单位工作人员介绍，涉事大桥于2017年12月开工建设，长度为107米，是省道S517上的一个新建桥梁。该大桥两侧栏杆采用铸造石成品栏杆，系大桥附属工程，尚未开展验收。然而，有报导证实，大桥2019年8月已经通车。这一说法，显然与“尚未开展验收”相矛盾。如果“栏杆采用铸造石成品栏杆”的说法属实，这用手一捏就碎的栏杆显然存在偷工减料的严重问题。</p>
 <p>事实上，大桥的施工方湖南对外建设集团的资质就应该受到质疑。据天眼查显示，该单位成立于1992年，主要开展建筑工程、公路工程、古建筑工程、桥梁工程等经营活动。该公司曾因施工偷工减料、未按规定报送纳税资料等原因，被行政处罚过5次，自身风险高达845条信息。</p>
 <h2>中国第一高楼成“第一高漏”</h2>
@@ -40,46 +40,39 @@
 <p>如果鲁班爷的在天之灵听闻当今这些玩建筑稿工程的徒子徒孙们如此之不肖，不知会不会气的侧目冷对，咬牙跺脚？</p>
 <p>朱镕基大骂九江大堤为“豆腐渣工程”、“王八蛋工程”。骂的好，骂的痛快！然而，正如有豆腐就会出豆腐渣，有王八就要生王八蛋，同理，只要有独裁暴政的中共存在，就一定会有腐败发生。如此一来，“豆腐渣”、“王八蛋”也就会在中共腐败的温床上代代相继，生生不息。</p>
 <p>责任编辑：高义</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/1/n11560822.md#1">王赫：中国人安全梦魇（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/14/n11587946.md#1">无锡高架桥倾塌 桥梁专家分析原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a></li>
-<hr>
-
-
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969803.md#1">瑞典女子因车祸濒死 见到未来的丈夫与孩子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963576.md#1">狄仁杰为什么会有深藏不露的医疗绝技？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968218.md#1">【未解之谜】难以磨灭的爱恋 隔世再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967518.md#1">千古名篇《长恨歌》经典诗句知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965413.md#1">【未解之谜】海奥华预言（2）正在逼近的星球危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970694.md#1">【新唐人大视野】中央巡视三板斧 两大领域危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13970025.md#1">【热点互动】北京的台湾牌 常态警巡台海？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969961.md#1">【环球直击】中共重判许志永丁家喜 舆论愤慨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969865.md#1">疑天安门红墙被喷“反共标语” 图片热传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969165.md#1">湖南男子吓死1100只鸡 凶器让人意想不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969345.md#1">马英九随行人员发照称“反攻大陆”后删除</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968847.md#1">徐乃麟次子跳级取得耶鲁博士 父子合照曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13969116.md#1">台湾名导范云杰因败血症病逝 享年54岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13969145.md#1">曾获封港版理查?基尔 方中信暴瘦到快认不出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13970011.md#1">功夫明星陈惠敏拄拐杖现身 健康状况引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969978.md#1">资深港星吴耀汉病逝 享寿83岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963816.md#1">每天1根香蕉抗癌防心脏病 但2类人不适合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963298.md#1">运动可治抑郁和焦虑？研究：比药物更有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969585.md#1">中空只剩树皮还泡咸水 华府樱花树年年开花</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968968.md#1">处理芦笋用这几招 吃起来更可口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968958.md#1">美喜剧作家谈育儿 分享他与女儿的有趣对话</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/11/n12248716.htm">掸封尘：气煞鲁班爷 唯问“王八蛋工程”何时休</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/7/11/n12248716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/11/n12248716.htm">掸封尘：气煞鲁班爷 唯问“王八蛋工程”何时休</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/7/11/n12248716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
